--- a/Views/Home/NewCars.cshtml
+++ b/Views/Home/NewCars.cshtml
@@ -143,7 +143,7 @@
                     {
                         <div class="alert alert-info text-center" id="initialNoCarsMessage">
                             <h4>No new cars found matching your criteria</h4>
-                            <p>Try adjusting your filters or <a href="@Url.Action("Create", "Car")" class="alert-link">add a new car listing</a>.</p>
+                            <p>Try adjusting your filters.</p>
                         </div>
                     }
                 </div>
@@ -156,7 +156,7 @@
 <div class="d-none" id="noResultsTemplate">
     <div class="alert alert-info text-center">
         <h4>No new cars found matching your criteria</h4>
-        <p>Try adjusting your filters or <a href="@Url.Action("Create", "Car")" class="alert-link">add a new car listing</a>.</p>
+        <p>Try adjusting your filters.</p>
     </div>
 </div>
 
@@ -363,7 +363,7 @@
                         $('#carListingsContainer').append(
                             $('<div class="alert alert-info text-center" id="noCarsMessage">')
                                 .append('<h4>No new cars found matching your criteria</h4>')
-                                .append('<p>Try adjusting your filters or <a href="' + '@Url.Action("Create", "Car")' + '" class="alert-link">add a new car listing</a>.</p>')
+                                .append('<p>Try adjusting your filters.</p>')
                         );
                     }
                 }
